syntax = "proto3";
package gitopia.gitopia.gitopia;

option go_package = "github.com/gitopia/gitopia/v4/x/gitopia/types";

import "gogoproto/gogo.proto";
import "gitopia/repository.proto";

message Issue {
  string creator = 1;
  uint64 id = 2;
  uint64 iid = 3; 
  string title = 4; 
  enum State {
    OPEN = 0;
	  CLOSED = 1;
  }
  State state = 5; 
  string description = 6;
  uint64 commentsCount = 7;
  repeated PullRequestIid pullRequests = 8;
  uint64 repositoryId = 9;
  repeated uint64 labels = 10;
  uint64 weight = 11;
  repeated string assignees = 12;
  repeated uint64 bounties = 13;
  int64 createdAt = 14;
  int64 updatedAt = 15;
  int64 closedAt = 16;
  string closedBy = 17;
}
